jitfailure-dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc/error.log
/tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp: In member function ‘virtual void dolfin::dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp:66:52: error: ‘math’ was not declared in this scope
           values[0] = rhoMax-((rhoMax-rhoMin)/(1 + math.exp(Inclination*(-t+t0)))+rhoMin)+rhoMin;
                                                    ^~~~
/tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp:66:52: note: suggested alternative:
In file included from /usr/include/boost/variant/variant.hpp:43:0,
                 from /usr/include/boost/variant.hpp:17,
                 from /usr/include/dolfin/parameter/Parameters.h:25,
                 from /usr/include/dolfin/common/Variable.h:28,
                 from /usr/include/dolfin/function/GenericFunction.h:30,
                 from /usr/include/dolfin/function/Expression.h:28,
                 from /tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp:13:
/usr/include/boost/math/common_factor_ct.hpp:17:11: note:   ‘boost::math’
 namespace math
           ^~~~
/tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp: In member function ‘virtual double dolfin::dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc::get_property(std::__cxx11::string) const’:
/tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp:78:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;
           ^~
/tmp/tmpnsnwxbx8/dolfin_expression_50ea2b7c2c642936c4fe18a6d3030abc.cpp:78:57: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "rhoMax") return rhoMax;          if (name == "rhoMin") return rhoMin;          if (name == "Inclination") return Inclination;          if (name == "t") return t;          if (name == "t0") return t0;
                                                         ^~
